--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   min-height: 100vh;
   /* padding: 1rem; */
   position: relative;
-  max-width: 800px;
+  /* max-width: 800px; */
   margin: 0 auto;
   width: 100%;
 }
